--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "chess.js": "^1.4.0",
+    "ejs": "^4.0.1",
     "express": "^5.2.1",
     "socket.io": "^4.8.3",
     "socket.js": "^0.1.4"
